seedboxk8s/applications/prowlarr/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prowlarr
  namespace: tortuga
spec:
  replicas: 1
  serviceName: prowlarr
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        # https://github.com/linuxserver/docker-prowlarr/releases
        - image: ghcr.io/linuxserver/prowlarr:2.3.0.5236-ls133
          name: prowlarr
          ports:
            - containerPort: 9696
          volumeMounts:
            - mountPath: /config
              name: prowlarr-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: prowlarr-config-pvc
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
