seedboxk8s/applications/prowlarr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: prowlarr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9696
