seedboxk8s/applications/prowlarr/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/group: Downloads
    gethomepage.dev/icon: prowlarr
    gethomepage.dev/href: https://prowlarr.${productionClusterFqdn}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: prowlarr
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
